// Vitest Snapshot v1

exports[`getClassMemberValuePath > ClassDeclaration > Getters and Setters > finds getters 1`] = `
Node {
  "async": false,
  "body": Node {
    "body": [],
    "directives": [],
    "type": "BlockStatement",
  },
  "computed": false,
  "generator": false,
  "id": null,
  "key": Node {
    "name": "foo",
    "type": "Identifier",
  },
  "kind": "get",
  "params": [],
  "static": false,
  "type": "ClassMethod",
}
`;

exports[`getClassMemberValuePath > ClassDeclaration > MethodDefinitions > finds "normal" method definitions 1`] = `
Node {
  "async": false,
  "body": Node {
    "body": [],
    "directives": [],
    "type": "BlockStatement",
  },
  "computed": false,
  "generator": false,
  "id": null,
  "key": Node {
    "name": "render",
    "type": "Identifier",
  },
  "kind": "method",
  "params": [],
  "static": false,
  "type": "ClassMethod",
}
`;

exports[`getClassMemberValuePath > ClassDeclaration > MethodDefinitions > finds computed method definitions with literal keys 1`] = `
Node {
  "async": false,
  "body": Node {
    "body": [],
    "directives": [],
    "type": "BlockStatement",
  },
  "computed": true,
  "generator": false,
  "id": null,
  "key": Node {
    "extra": {
      "raw": "'render'",
      "rawValue": "render",
    },
    "type": "StringLiteral",
    "value": "render",
  },
  "kind": "method",
  "params": [],
  "static": false,
  "type": "ClassMethod",
}
`;

exports[`getClassMemberValuePath > ClassExpression > finds "normal" method definitions 1`] = `
Node {
  "async": false,
  "body": Node {
    "body": [],
    "directives": [],
    "type": "BlockStatement",
  },
  "computed": false,
  "generator": false,
  "id": null,
  "key": Node {
    "name": "render",
    "type": "Identifier",
  },
  "kind": "method",
  "params": [],
  "static": false,
  "type": "ClassMethod",
}
`;
